# routes/project.routes.js
@@ -1,5 +1,5 @@
 const express=require("express");
-const { createProject, getAllProject, getSingleProject, updateProject, deleteProject } = require("../controller/projects.controller");
+const { createProject, getAllProject, getSingleProject, updateProject, deleteProject, projectPhotoUpload } = require("../controller/projects.controller");
 const { protect } = require("../utils/protect");
 const router=express.Router();
 router.post("/api/v1/project",protect,createProject)
@@ -7,4 +7,5 @@ router.get("/api/v1/project",getAllProject)
 router.get("/api/v1/project/:id",getSingleProject)
 router.put("/api/v1/project/:id",protect,updateProject)
 router.delete("/api/v1/project/:id",protect,deleteProject)
+router.put("/api/v1/project/image/:id",protect,projectPhotoUpload)
 module.exports.Project=router;
